Added READ section

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 						<h1><a href="index.html">ART&ANCIENT</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">ART</a></li>
+								<li><a href="ArtPage.html">ART</a></li>
 								<li><a href="Blog.html">BLOG</a></li>
-								<li><a href="Gallery.html">GALLERY</a></li>
+								<li><a href="Art/GalleryPage.html">GALLERY</a></li>
+								<li><a href="Reads.html">READS</a></li>
 							</ul>
 						</nav>
 						
