--- a/ArtPage.html
+++ b/ArtPage.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>ART&ANCIENT</title>
+		<title>ART - ART&ANCIENT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,9 +17,10 @@
 						<h1><a href="index.html">ART&ANCIENT</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">ART</a></li>
+								<li><a href="ArtPage.html">ART</a></li>
 								<li><a href="Blog.html">BLOG</a></li>
-								<li><a href="Gallery.html">GALLERY</a></li>
+								<li><a href="Art/GalleryPage.html">GALLERY</a></li>
+								<li><a href="Reads.html">READS</a></li>
 							</ul>
 						</nav>
 						
