--- a/Art/GalleryPage.html
+++ b/Art/GalleryPage.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<script>
-						document.write('<a href="' + document.referrer + '">Go Back</a>');
+						document.write('<a href="' + document.referrer + '">  Go Back  </a>');
 					</script>
 					
 					<header id="header">
@@ -37,60 +37,120 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/Bodega.jpg" data-position="top center"><img src="images/Bodega.jpg" alt="" /></a>
-							<h2>BODEGA</h2>
-							<p>A small storefront on the streets on China.</p>
+							<a class="thumbnail" href="images/montreal_1.JPG" ><img src="images/montreal_1.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/IndianCoffeeHouse.jpg" data-position="top center"><img src="images/IndianCoffeeHouse.jpg" alt="" /></a>
-							<h2>INDIAN COFFEE HOUSE</h2>
-							<p>One of the oldest and an iconic coffee house located in Kolkata, India.</p>
+							<a class="thumbnail" href="images/montreal_2.JPG" ><img src="images/montreal_2.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/Jungkook.jpg" data-position="top center"><img src="images/Jungkook.jpg" alt="" /></a>
-							<h2>JUNGKOOK of BTS</h2>
-							<p>Street style that never dies.</p>
+							<a class="thumbnail" href="images/montreal_3.JPG" ><img src="images/montreal_3.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article> 
+						<article>
+							<a class="thumbnail" href="images/montreal_4.JPG" ><img src="images/montreal_4.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/Jungkook_black.jpg" data-position="top center"><img src="images/Jungkook_black.jpg" alt="" /></a>
-							<h2>JUNGKOOK of BTS</h2>
-							<p>Man in Black?</p>
+							<a class="thumbnail" href="images/montreal_5.JPG"><img src="images/montreal_5.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/SelfPortrait.jpg" data-position="top center"><img src="images/SelfPortrait.jpg" alt="" /></a>
-							<h2>SELF PORTRAIT</h2>
-							<p>“let me live, love, and say it well in good sentences” -  Slyvia Plath</p>
+							<a class="thumbnail" href="images/montreal_6.JPG" ><img src="images/montreal_6.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/MinYoongi.jpg" data-position="top center"><img src="images/MinYoongi.jpg" alt="" /></a>
-							<h2>MIN YOONGI of BTS</h2>
-							<p>"We'll be in full bloom at the end of these hardships"</p>
+							<a class="thumbnail" href="images/montreal_7.JPG" ><img src="images/montreal_7.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/Taehyung.jpg" data-position="top center"><img src="images/Taehyung.jpg" alt="" /></a>
-							<h2>V of BTS</h2>
-							<p>We can't fly? well let's RUN.</p>
+							<a class="thumbnail" href="images/montreal_8.JPG" ><img src="images/montreal_8.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/RedTruck.jpg" data-position="top center"><img src="images/RedTruck.jpg" alt="" /></a>
-							<h2>That red truck we chased! (Gouche Art)</h2>
-							<p>"And everything I did, I thought 'You should be here'."</p>
+							<a class="thumbnail" href="images/montreal_9.JPG"><img src="images/montreal_9.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/Kettle.jpg" data-position="top center"><img src="images/Kettle.jpg" alt="" /></a>
-							<h2>Gouche Art</h2>
-							<p>'I have a deeply hidden and inarticulate desire for something beyond the daily life.' - Virginia Woolf</p>
+							<a class="thumbnail" href="images/Barrie.jpg" ><img src="images/Barrie.jpg" alt="" /></a>
+							<h2></h2>
+							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/Yumi.jpg" data-position="top center"><img src="images/Yumi.jpg" alt="" /></a>
-							<h2>YUMI CELLS (Webtoon)</h2>
-							<p>"Right! Happiness doesn't come alone"</p>
+							<a class="thumbnail" href="images/Bluffs.jpg" ><img src="images/Bluffs.jpg" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+
+						<article>
+							<a class="thumbnail" href="images/montreal_NotreDame.jpg" ><img src="images/montreal_NotreDame.jpg" alt="" /></a>
+							<h2></h2>
+							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/Rockwaters.jpg" data-position="top center"><img src="images/Rockwaters.jpg" alt="" /></a>
-							<h2>"You jump, I jump Jack!"</h2>
-							<p>Medium - Procreate</p>
+							<a class="thumbnail" href="images/Muskoka_1.JPG" ><img src="images/Muskoka_1.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
 						</article>
+						<article>
+							<a class="thumbnail" href="images/Muskoka_2.JPG" ><img src="images/Muskoka_2.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/Christmas_1.jpg" ><img src="images/Christmas_1.jpg" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/Christmas_3.jpg" ><img src="images/Christmas_3.jpg" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/Christmas_4.jpg" ><img src="images/Christmas_4.jpg" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/IceC.JPG" ><img src="images/IceC.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/Pennies.JPG" ><img src="images/Pennies.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/McGill.JPG" ><img src="images/McGill.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/Kbqq.JPG" ><img src="images/Kbqq.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/LockHearts.JPG" ><img src="images/LockHearts.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+
+
+
+
 						<!--  <article>
 							<a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" /></a>
 							<h2>Mattis lorem sodales</h2>
