--- a/ArtPage.html
+++ b/ArtPage.html
@@ -33,14 +33,20 @@
             <div class="box alt">
                 <div class="row gtr-uniform">
                     <div class="col-4"><span class="image fit"><img src="images/Somewhere.jpg" alt="" /></span></div>
+                    <div class="col-4"><span class="image fit"><img src="images/Avatar_BluePuffer.JPG" alt="" /></span></div>
+                    <div class="col-4"><span class="image fit"><img src="images/Yumi.jpg" alt="" /></span></div>
+                    <div class="col-4"><span class="image fit"><img src="images/V.jpg" alt="" /></span></div>
+                    <div class="col-4"><span class="image fit"><img src="images/Tomomi.jpg" alt="" /></span></div>
+                    <div class="col-4"><span class="image fit"><img src="images/Tempo.jpg" alt="" /></span></div>
+                    <div class="col-4"><span class="image fit"><img src="images/Market.JPG" alt="" /></span></div>
+                    <div class="col-4"><span class="image fit"><img src="images/Laal Gaadi.JPG" alt="" /></span></div>
                     <div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-                    <div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-                    <div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-                    <div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-                    <div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-                    <div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-                    <div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-                    <div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
+					<div class="col-4"><span class="image fit"><img src="images/Breaveheart.JPG" alt="" /></span></div>
+					<div class="col-4"><span class="image fit"><img src="images/goku.JPEG" alt="" /></span></div>
+					<div class="col-4"><span class="image fit"><img src="images/fish.gif" alt="" /></span></div>
+					<div class="col-4"><span class="image fit"><img src="images/The Night train.png" alt="" /></span></div>
+					<div class="col-4"><span class="image fit"><img src="images/bw_thanos.JPEG" alt="" /></span></div>
+					<div class="col-4"><span class="image fit"><img src="images/AmericanPsycho.JPG" alt="" /></span></div>
                     
                 </div>
             </div>
