--- a/Blog.html
+++ b/Blog.html
@@ -26,6 +26,15 @@
 						
 					</header>
 
+					<!-- Under Construction-->
+					<section id="intro">
+
+						<header>
+							<h2>UNDER CONSTRUCTION</h2>
+							
+						</header>
+					</section>
+
         <!-- Mini Posts -->
 			 <section>
                 <div class="mini-posts">
