--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
 									<h4>Fit</h4> -->
 									<div class="box alt">
 										<div class="row gtr-uniform">
-											<div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/Jug.JPG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/bw_arya.jpeg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/bw_astro.JPG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/bw_lana.PNG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/bw_cmbyn.JPG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/bw_dwyane.JPEG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/bw_colos.JPG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/bw_demi1.JPG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/bw_fios.JPG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/bw_love.jpg" alt="" /></span></div>
 											
 										</div>
 									</div>
