--- a/Art/GalleryPage.html
+++ b/Art/GalleryPage.html
@@ -147,6 +147,21 @@
 							<h2></h2>
 							<p></p>
 						</article>
+						<article>
+							<a class="thumbnail" href="images/Greens.jpg" ><img src="images/Greens.jpg" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/TV.jpg" ><img src="images/TV.jpg" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+
+
+					
+					</section>
+				</div>
 
 
 
@@ -165,7 +180,7 @@
 						</ul>
 					</footer> -->
 
-			</div>
+			
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
