Added new images

--- a/Art/GalleryPage.html
+++ b/Art/GalleryPage.html
@@ -147,16 +147,55 @@
 							<h2></h2>
 							<p></p>
 						</article>
+					
+						</article>
 						<article>
-							<a class="thumbnail" href="images/Greens.jpg" ><img src="images/Greens.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/NotreDame.JPG" ><img src="images/NotreDame.JPG" alt="" /></a>
 							<h2></h2>
 							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/TV.jpg" ><img src="images/TV.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/Schwarts.JPG" ><img src="images/Schwarts.JPG" alt="" /></a>
 							<h2></h2>
 							<p></p>
 						</article>
+						<article>
+							<a class="thumbnail" href="images/Port.JPG" ><img src="images/Port.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/Mont_view.png" ><img src="images/Mont_view.png" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/MOntreal_Church.JPG" ><img src="images/MOntreal_Church.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/ChaiTea.JPG" ><img src="images/ChaiTea.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/Ooty.JPG	" ><img src="images/Ooty.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/Dali2.jpg" ><img src="images/Dali2.jpg" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/Dali.gif" ><img src="images/Dali.gif" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+
+
 
 
 					
