--- a/Art/GalleryPage.html
+++ b/Art/GalleryPage.html
@@ -190,7 +190,7 @@
 							<p></p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/Dali.gif" ><img src="images/Dali.gif" alt="" /></a>
+							<a class="thumbnail" href="images/Dali(1).gif" ><img src="images/Dali(1).gif" alt="" /></a>
 							<h2></h2>
 							<p></p>
 						</article>
