--- a/Art/GalleryPage.html
+++ b/Art/GalleryPage.html
@@ -190,10 +190,21 @@
 							<p></p>
 						</article>
 						<article>
+							<a class="thumbnail" href="images/Dali3.jpg" ><img src="images/Dali3.jpg" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/Banff_1.JPG" ><img src="images/Banff_1.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article>
 							<a class="thumbnail" href="images/Dali(1).gif" ><img src="images/Dali(1).gif" alt="" /></a>
 							<h2></h2>
 							<p></p>
 						</article>
+						
 
 
 
