--- a/ArtPage.html
+++ b/ArtPage.html
@@ -56,6 +56,8 @@
 					<div class="col-4"><span class="image fit"><img src="images/fish.gif" alt="" /></span></div>
 					<div class="col-4"><span class="image fit"><img src="images/The Night train.png" alt="" /></span></div>
 					<div class="col-4"><span class="image fit"><img src="images/bw_thanos.JPEG" alt="" /></span></div>
+					<div class="col-4"><span class="image fit"><img src="images/Barbie.jpg" alt="" /></span></div>
+
 					
                     
                 </div>
